# pl-abs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  abs.py  chris_plugin_info.json
.github/workflows/: ci.yml
examples/incoming/: floats.txt  scientific_notation.txt  table.csv
examples/outgoing/: floats.txt  scientific_notation.txt  table.csv
src/: abs_file.rs  main.rs  path_mapper.rs
stress_test/: create_data.py
