[package]
name = "abs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.1"
walkdir = "2.3.2"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
